Fixed Order#Create to record proper totals. Showing approver in PO. Enabled Add Parts. Inserted spinner. Plus other cleanups.

--- a/app/assets/stylesheets/messages.css.scss
+++ b/app/assets/stylesheets/messages.css.scss
@@ -1,4 +1,4 @@
-.messages { overflow: hidden;
+.messages { //overflow: hidden;
 	h3 { clear: both; /*float: left;*/ margin-bottom: 10px; }
 	h6 { clear: both; margin-bottom: 20px;  }
 	.msg-buttons {  
