--- a/app/views/admin/_nav.html.erb
+++ b/app/views/admin/_nav.html.erb
@@ -49,6 +49,7 @@
 			<%= content_tag :li, '', class: 'divider' %>
 			<%= nav_link('Companies', companies_path) %>
 			<%= nav_link('Branches', branches_path) %>
+			<%= nav_link('Cities', cities_path) %>
 			<%= content_tag :li, '', class: 'divider' %>
 			<%= nav_link('Ratings', ratings_path) %>
 		</ul>
