--- a/app/views/line_items/add.html.erb
+++ b/app/views/line_items/add.html.erb
@@ -15,3 +15,9 @@
 	</div>
 </div>
 
+<% content_for :javascripts do %>
+	<script type="text/javascript" charset="utf-8">
+		$('a.btn').tooltip();
+	</script>
+<% end %>
+
