--- a/app/views/orders/_order_form2.html.erb
+++ b/app/views/orders/_order_form2.html.erb
@@ -24,7 +24,7 @@
 			<%= content_tag :div, class: 'span4' do %>
 				<%= o.input :ref_no, label: "What's your PO Number?" %>
 				<%= o.input :ref_name, label: "Who is the Insured?", required: true %>
-				<%= f.input :ref_no, label: "Is this the correct Claim No.?", hint: 'Make sure this is accurate' %>
+				<%= f.input :ref_no, label: "Is this the correct Claim No.?", hint: 'Make sure this is accurate', required: true %>
 			<% end %>
 
 			<%= content_tag :div, class: 'span4' do %>
@@ -33,8 +33,8 @@
 					<%= o.label 'Address', required: true %>
 					<%= content_tag :p, "Note: your original request was #{content_tag :span, @entry.city.name, class: 'label label-info'} <br> Charges may apply for farther areas".html_safe, id: 'address-note' %>
 				<% end %>
-				<%= o.input :address1, label: 'Bldg, number, street', required: true %>
-				<%= o.input :address2, label: "Baranggay/district, city or province".html_safe, required: true %>
+				<%= o.input :address1, label: 'Bldg or number + street', required: true %>
+				<%= o.input :address2, label: "Baranggay or district + city or province".html_safe, required: true %>
 			<% end %>
 
 			<%= content_tag :div, class: 'span3' do %>
