--- a/app/views/variances/create.js.erb
+++ b/app/views/variances/create.js.erb
@@ -1,1 +1,2 @@
-$('#variance-table').html("<%= escape_javascript(render 'variances/results') %>")
+$('#variance-table').html("<%= escape_javascript(render 'variances/results') %>");
+$(".spinner").hide();
