--- a/app/assets/stylesheets/main.css.scss
+++ b/app/assets/stylesheets/main.css.scss
@@ -54,6 +54,9 @@ dd { width: 67%; }
 	}
 .sidebar-status { border: 2px solid white; padding: 10px; text-align: center; }
 
+.spinner { background-color: #FFF; height: 100%; width: 100%; position: fixed; top: 0; left: 0; opacity: 0.75; }
+.spinner img { z-index: 100; position: relative; top: 40%; left: 45%; }
+
 //.pagination li.disabled { display: none; }
 
 .parts-surrender { 
