--- a/app/views/car_parts/_form.html.erb
+++ b/app/views/car_parts/_form.html.erb
@@ -1,24 +1,18 @@
-<%= form_for @car_part, :html => { :class => 'form-horizontal' } do |f| %>
+<%= simple_form_for @car_part, :html => { :class => 'form-horizontal' } do |f| %>
   <fieldset>
     <legend><%= controller.action_name.capitalize %> Car Part</legend>
-
-    <div class="control-group">
-      <%= f.label :name, :class => 'control-label' %>
-      <div class="controls">
-        <%= f.text_field :name, :class => 'text_field' %>
-      </div>
-    </div>
-
-    <div class="control-group">
-      <%= f.label :creator_id, :class => 'control-label' %>
-      <div class="controls">
-        <%= f.text_field :creator_id, :class => 'text_field' %>
-      </div>
-    </div>
+		<%= hidden_field_tag :entry, params[:id] %>
+		
+		<%= f.input :name, :label => 'Part Name' %>
+		<% if can? :access, :all %>
+			<%= f.input :creator_id, collection: Company.includes(:users), as: :grouped_select, group_label_method: :nickname, group_method: :users, label_method: :username %>
+    <% else %>
+	     <%= f.input :creator_id, collection: Company.includes(:users), as: :grouped_select, group_label_method: :nickname, group_method: :users, label_method: :username, disabled: true %>
+		<% end %>
 
     <div class="form-actions">
       <%= f.submit nil, :class => 'btn btn-primary' %>
-      <%= link_to 'Cancel', car_parts_path, :class => 'btn' %>
+      <%= link_to 'Cancel', add_line_items_path(id: params[:id]), :class => 'btn' %>
     </div>
   </fieldset>
 <% end %>
