--- a/app/views/entries/edit.html.erb
+++ b/app/views/entries/edit.html.erb
@@ -1,5 +1,5 @@
 <% title "Edit Entry" %>
 
-<%= simple_nested_form_for @entry, :validate => true do |f| %>
+<%= simple_nested_form_for @entry do |f| %>
 	<%= render 'form', f: f %>
 <% end %>
