--- a/app/views/cart/add.js.erb
+++ b/app/views/cart/add.js.erb
@@ -3,3 +3,4 @@ $("div#parts-list").html("<%= escape_javascript(render 'cart/cart') %>");
 $("div#parts-list tr#<%= @item.id %>").effect("highlight", {}, 4000);
 $(".search-query").val('');
 $('html, body').animate({ scrollTop: 0 }, 0);
+$(".spinner").hide();
