--- a/app/views/cart/remove.js.erb
+++ b/app/views/cart/remove.js.erb
@@ -3,3 +3,4 @@ $("div#parts-list tr#<%= @item.id %>").fadeOut();
 <% if @cart.cart_items.empty? %>
 	$('.clear').remove();
 <% end %>
+$(".spinner").hide();
