Still working on precompile issues. New hero background.

--- a/app/assets/stylesheets/main.css.scss
+++ b/app/assets/stylesheets/main.css.scss
@@ -1,3 +1,4 @@
+.hero-unit { background: url(../assets/hero.jpg) no-repeat 0 0; }
 .hero-unit .row { margin-top: 35px; } 
 
 #main { position: relative; }
