--- a/app/views/admin/_nav.html.erb
+++ b/app/views/admin/_nav.html.erb
@@ -11,7 +11,7 @@
 			<%= nav_link('With Orders', entries_path(s: 'ordered')) %>
 			<%= nav_link('Declined', entries_path(s: 'declined')) %>
 			<%= content_tag :li, '', class: 'divider' %>
-			<%= nav_link('All Entries', entries_path(s: nil)) %>
+			<%= content_tag :li, link_to('All Entries', entries_path) %>
 		</ul>
 	<% end %>
 	<%= content_tag :li, class: "dropdown #{drop_active_cont?('orders')}" do %>
