--- a/app/views/entries/index.html.erb
+++ b/app/views/entries/index.html.erb
@@ -78,6 +78,9 @@
 	  <%= f.grouped_collection_select :user_id_eq, @branches, :users, :nickname, :id, :shortname, {include_blank: true} %>
 	  <%= f.label 'Car Brand' %>
 	  <%= f.grouped_collection_select :car_brand_id_eq, CarOrigin.includes(:car_brands), :car_brands, :name, :id, :name, {include_blank: true} %>
-	  <%= content_tag :p, (f.submit 'Search', class: 'btn primary') %>
+	  <%= content_tag :p do %>
+			<%= f.submit 'Search', class: 'btn btn-primary' %>
+			<%= refresh_button %>
+		<% end %>
 	<% end %>
 <% end %>
