--- a/app/views/orders/_items_table.html.erb
+++ b/app/views/orders/_items_table.html.erb
@@ -29,9 +29,9 @@
 		<% end %>
 
 		<%= content_tag :tr, class: 'total' do %>
-			<%= content_tag :td, total_label_helper(bids, params[:action]), colspan: 5, class: 'txtright' %>
-			<%= content_tag :td, total_amount_helper(bids, params[:action]), class: 'span3 txtright' %>
-			<%= content_tag :td, '', class: '' %>
+			<%= content_tag :td, total_label_helper(@order, bids, params[:action]), colspan: 5, class: 'txtright' %>
+			<%= content_tag :td, total_amount_helper(@order, bids, params[:action]), class: 'span3 txtright' %>
+			<%= content_tag :td %>
 		<% end %>
 	<% end %>
 
