--- a/app/views/shared/_navigation.html.erb
+++ b/app/views/shared/_navigation.html.erb
@@ -8,7 +8,7 @@
            <span class="icon-bar"></span>
            <span class="icon-bar"></span>
          </a>
-	      <%= link_to 'E-Bid', root_path, class: 'brand' %>
+	      <%= link_to 'E-Bid v4.0', root_path, class: 'brand' %>
          <div class="nav-collapse">
  					<% if user_signed_in? %>
 						<% if can? :access, :all #current_user.role?(:admin) %>
