--- a/app/views/layouts/print.html.erb
+++ b/app/views/layouts/print.html.erb
@@ -1,13 +1,24 @@
 <!DOCTYPE html>
 <html>
   <head>
+    <meta charset="utf-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="description" content="">
+    <meta name="author" content="">
     <title>
       <%= content_for?(:title) ? "Print | " + yield(:title) : "E-Bid Inc. - The Philippines' Vehicle Parts Auction Hub" %>
     </title>
+
+    <!-- Le HTML5 shim, for IE6-8 support of HTML elements -->
+    <!--[if lt IE 9]>
+			<%= javascript_include_tag 'html5shiv.js' %>
+    <![endif]-->
+
 		<%= stylesheet_link_tag 'print', media: 'all' %>
-    <%= csrf_meta_tag %>
-		<link rel="shortcut icon" href="/images/base/favicon.ico" />
-		<%= yield(:head) %>
+    <%= yield(:head) %>
+    <%= csrf_meta_tags %>
+    <link href="/assets/favicon.ico" rel="shortcut icon">
   </head>
 
   <body class="<%= params[:controller] %>">
