--- a/app/views/messages/index.html.erb
+++ b/app/views/messages/index.html.erb
@@ -8,14 +8,16 @@
 		<%= content_tag :thead do %>
 			<%= content_tag :th, 'ID', class: 'span1 txttxtcenter' %>
 			<%= content_tag :th, 'Sender', class: 'span2' %>
-			<%= content_tag :th, 'receiver', class: 'span2' %>
-			<%= content_tag :th, 'Message', class: 'span11' %>
+			<%= content_tag :th, 'Receiver', class: 'span2' %>
+			<%= content_tag :th, 'Message', class: 'span9' %>
+			<%= content_tag :th %>
 			<%= content_tag :th, 'Order #', class: 'span2 txtcenter' %>
+			<%= content_tag :th, 'Actions', class: 'span2' %>
 		<% end %>
 		<%= content_tag :tbody do %>
 			<% @messages.group_by(&:entry).each do |entry, messages| %>
 				<tr class="well">
-					<%= content_tag :td, colspan: 5 do %>
+					<%= content_tag :td, colspan: 7 do %>
 						<%= content_tag :span, "Entry ID # #{link_to(entry.id, entry)}".html_safe if entry %>
 						<%= content_tag :span, entry.status, class: "label #{entry.status_color}" if entry %>
 					<% end %>
@@ -31,16 +33,20 @@
 							<%= content_tag :p, link_to(m.receiver.username, m.receiver), class: '' if m.receiver %>
 							<%= content_tag :em, m.receiver_company.nickname, class: 'small' if m. receiver %>
 						<% end %>
-						<%= content_tag :td, class: 'span11' do %>
+						<%= content_tag :td, class: 'span9' do %>
 							<%= content_tag :p, m.message, class: '' %>
-							<%= content_tag :span, (m.open_tag ? 'Public' : 'Private'), class: "label #{m.open_tag ? 'cool' : nil}" %>
-							<%= content_tag :span, short_date(m.created_at), class: 'small' %>
-							<%= content_tag :span, link_to('edit', edit_message_path(m)) %>
-							<%= content_tag :span, link_to('delete', m, confirm: 'Are you sure you want to delete this message?', method: :delete) %>
+						<% end %>
+						<%= content_tag :td, class: 'span2' do %>
+							<%= content_tag :span, (m.open_tag ? 'Public' : 'Private'), class: "label #{m.open_tag ? 'label-success' : nil}" %>
+							<%= content_tag :p, short_date(m.created_at), class: 'small' %>
 						<% end %>
 						<%= content_tag :td, class: 'span2 txtcenter' do %>
 							<%= content_tag :p, link_to(m.order_id, m.order) if m.order %>
-							<%= content_tag :span, m.order.status, class: "#{m.order.status_color}" if m.order %>
+							<%= content_tag :span, m.order.status, class: "#{m.order.status_color} small" if m.order %>
+						<% end %>
+						<%= content_tag :td do %>
+							<%= link_to('edit', edit_message_path(m), class: 'btn btn-mini') %>
+							<%= link_to('delete', m, confirm: 'Are you sure you want to delete this message?', method: :delete, class: 'btn btn-mini btn-danger') %>
 						<% end %>
 					</tr>
 				<% end %>
